# Hackathon-0_Q-4

./: .env.example  .gitignore  Business_Goals.md  Company_Handbook.md  Dashboard.md  README.md  base_watcher.py  demo_script.md  filesystem_watcher.py  gmail_watcher.py  linkedin_mcp.py  main.py  orchestrator.py  pyproject.toml  ralph_loop.py  security_checklist.md  security_config.py
.claude/skills/: approval_handler.md  ceo_briefing.md  create_plan.md  execute_approved.md  file_processor.md  linkedin_poster.md  process_inbox.md  update_dashboard.md
.obsidian/: workspace.json
.obsidian/.obsidian/: workspace.json
Accounting/: Current_Month.md
Briefings/: 2026-02-16_Monday_Briefing.md  2026-02-16_Monday_Briefing_v2.md
Done/: DONE_email_reply_client_a_20260211.md  DONE_file_processing_quarterly_report_20260213.md  DONE_payment_invoice_client_a_20260212.md
Logs/: 2026-02-14.md  2026-02-15.md
Needs_Action/emails/: 20260214_120200_URGENT_Invoice_Request.md
Needs_Action/files/: 20260213_022520_test_invoice.md
Pending_Approval/: APPROVAL_email_new_contact_20260214.md  APPROVAL_email_new_contact_invoice_20260214.md  LINKEDIN_2026-02-15.md  TEMPLATE_approval.md
Plans/: PLAN_email_urgent_invoice_request_20260214.md  PLAN_review_test_invoice_20260214.md  SETUP_gmail_api_20260214.md
ai-employee-watchers/: .env.example  pyproject.toml
